k8s-resource-manifests/chariot-mma-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chariot-mma-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    #ingress.kubernetes.io/rewrite-target: /
    #kubernetes.io/ingress.class: "nginx"
    #kubernetes.io/ingress.class: "public"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
        - path: /mma-web
          backend:
            serviceName: chariot-mma-web-lb
            servicePort: 9080
